kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sponge-prod
  labels:
    name: sponge-prod
    environment: production
